[gd_scene load_steps=11 format=2]

[ext_resource path="res://Car.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Orb.tscn" type="PackedScene" id=4]
[ext_resource path="res://RotationBehavior.tscn" type="PackedScene" id=5]
[ext_resource path="res://Speedometer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Spike.tscn" type="PackedScene" id=7]
[ext_resource path="res://Speedometer.gd" type="Script" id=8]
[ext_resource path="res://sounds/104026__rutgermuller__tires-squeaking.ogg" type="AudioStream" id=9]
[ext_resource path="res://CityGround.gd" type="Script" id=11]
[ext_resource path="res://Menu.gd" type="Script" id=12]

[node name="Scene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -657, 0 )
scale = Vector2( 2, 2 )
current = true
zoom = Vector2( 3, 3 )

[node name="YSort" type="YSort" parent="."]

[node name="Car" parent="YSort" instance=ExtResource( 2 )]

[node name="CityGround" type="Node2D" parent="YSort"]
script = ExtResource( 11 )

[node name="ActiveTerrain" type="Node2D" parent="YSort/CityGround"]

[node name="Player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( -657, 0 )
scale = Vector2( 2, 2 )
z_index = 1
collision_mask = 6

[node name="CameraTransform" type="RemoteTransform2D" parent="YSort/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="PoliceCar" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( -959, -164 )
z_index = 1

[node name="Orb2" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( -1, -15 )
__meta__ = {
"_edit_lock_": true
}

[node name="RotationBehavior" parent="YSort/Orb2" instance=ExtResource( 5 )]
radius = 15.0
speed = 3.0

[node name="Orb1" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 205.961, -1.76969 )
__meta__ = {
"_edit_lock_": true
}

[node name="Orb4" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 255.432, -161.822 )
__meta__ = {
"_edit_lock_": true
}

[node name="RotationBehavior" parent="YSort/Orb4" instance=ExtResource( 5 )]
radius = 5.0
speed = 3.0

[node name="Orb5" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( -132.963, -164.68 )
__meta__ = {
"_edit_lock_": true
}

[node name="RotationBehavior" parent="YSort/Orb5" instance=ExtResource( 5 )]
speed = 2.0

[node name="Orb6" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( -130.715, 150.339 )
__meta__ = {
"_edit_lock_": true
}

[node name="Orb7" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 9.34519, 204.429 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spike2" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( -51, 0 )

[node name="Spike" parent="YSort" instance=ExtResource( 7 )]

[node name="Spike5" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( -225, 0 )

[node name="Spike4" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( -280, -88 )

[node name="Spike3" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( -318, 64 )

[node name="RedOilBarrel" type="Sprite" parent="YSort"]
position = Vector2( 840, 146 )
scale = Vector2( 4, 4 )
z_index = 1

[node name="RedOilBarrel2" type="Sprite" parent="YSort"]
position = Vector2( -670, -177 )
scale = Vector2( 4, 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="CanvasLayer"]
margin_left = 206.0
margin_top = 83.0
margin_right = 246.0
margin_bottom = 123.0
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
margin_right = 82.0
margin_bottom = 92.0

[node name="StartButton" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
text = "New Game"

[node name="ControlsButton" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "Controls"

[node name="PopupDialog" type="PopupDialog" parent="CanvasLayer/Menu/VBoxContainer/ControlsButton"]
visible = true
margin_left = 160.0
margin_top = 80.0
margin_right = 400.0
margin_bottom = 240.0
__meta__ = {
"_editor_description_": ""
}

[node name="Controls Header" type="RichTextLabel" parent="CanvasLayer/Menu/VBoxContainer/ControlsButton/PopupDialog"]
margin_left = 72.0
margin_top = 9.0
margin_right = 150.0
margin_bottom = 24.0
text = "Controls"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Menu/VBoxContainer/ControlsButton/PopupDialog"]
margin_top = 35.0
margin_right = 204.0
margin_bottom = 175.0
size_flags_horizontal = 7
size_flags_vertical = 7
columns = 2

[node name="SteerLeft" type="RichTextLabel" parent="CanvasLayer/Menu/VBoxContainer/ControlsButton/PopupDialog/GridContainer"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )
text = "Steer Left [ ]"

[node name="SteerRight" type="RichTextLabel" parent="CanvasLayer/Menu/VBoxContainer/ControlsButton/PopupDialog/GridContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )
text = "Steer Right [ ]"

[node name="Accelerate" type="RichTextLabel" parent="CanvasLayer/Menu/VBoxContainer/ControlsButton/PopupDialog/GridContainer"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 15 )
text = "Accelerate [ ]"

[node name="Brake" type="RichTextLabel" parent="CanvasLayer/Menu/VBoxContainer/ControlsButton/PopupDialog/GridContainer"]
margin_left = 104.0
margin_top = 19.0
margin_right = 204.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 15 )
text = "Brake [ ]"

[node name="OptionsButton" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
text = "Options"

[node name="QuitButton" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
margin_top = 72.0
margin_right = 82.0
margin_bottom = 92.0
text = "Quit"

[node name="Speedometer" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = 414.0
margin_top = 183.0
margin_right = 391.0
margin_bottom = 215.0
rect_scale = Vector2( 0.2, 0.2 )
script = ExtResource( 8 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2( 20, 11 )
color = Color( 0.882353, 0.92549, 0.921569, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = 266.0
margin_right = 168.0
margin_bottom = 306.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "ROAD RASH"

[node name="Burnout" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/StartButton" to="CanvasLayer/Menu" method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/ControlsButton" to="CanvasLayer/Menu" method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/QuitButton" to="CanvasLayer/Menu" method="_on_QuitButton_pressed"]
